--- a/config/scenario2_config.yaml
+++ b/config/scenario2_config.yaml
@@ -4,7 +4,9 @@ confidence: 0.35
 line_position: 0.50
 count_direction: both
 cooldown_frames: 30
-track_classes: [0]
+track_classes: [0, 24, 26, 28]
+roi_y_min: 0.45       # focus lower region where closest loading happens
+roi_y_max: 1.0
 show_preview: false
 save_output: true
 output_dir: outputs/scenario2
